fixed card visibility

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -10,6 +10,10 @@ body, #dropzone, #available-block {
     background-position: center;
 }
 
+.card {
+    display: none;
+}
+
 /*adding a divider border*/
 #divider {
     border-right: 1px solid red;
